fix: adjusted main navigation content spacing

--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ ul li::marker {
 
 .main-nav-link,
 .main-nav-link-cta {
+  display: inline-block;
   font-size: 14px;
 }
 
@@ -153,6 +154,7 @@ ul li::marker {
   font-weight: 500;
   color: #808080;
   padding: 8px 12px;
+  border-bottom: 2px solid transparent;
 }
 
 .main-nav-link:hover {
@@ -163,6 +165,7 @@ ul li::marker {
 .main-nav-link-cta {
   color: #fff;
   background-color: var(--odin-secondary);
+  margin-left: 48px;
   padding: 12px 16px;
   border-radius: 5px;
 }
@@ -185,7 +188,6 @@ ul li::marker {
   display: none;
   flex-direction: column;
   gap: 8px;
-  /* margin-top: 10px; */
   position: absolute;
   background-color: #fff;
   width: 150px;
